2009-01-27  Mike Krüger  <mkrueger@novell.com>

	* CBinding.addin.xml: fixed "Bug 468416 - *.h aren't colorized as c++
	headers".

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.mdp: Flush project format changes.

2009-01-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/CTextEditorExtension.cs: fixed bug 'Bug 467553 - Enter key doesn't
	delete selected text'.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.mdp:
	* CBinding.Autotools/CBinding.Autotools.mdp: All projects now require fx
	3.5.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.mdp: Don't require a specific version of Mono.Addins.

2008-12-06  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* CBinding.addin.xml: Added C++ header mimetype.

2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CTextEditorExtension.cs: Track api changes.

2008-12-05  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* Gui/CodeGenerationPanel.cs: Fixed typo causing include directories to be
	duplicated when switching between configurations.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* CBinding.mdp:
	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-23  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs: Trailing whitespace after the
	cursor when inserting a new line will no longer copy additional
	whitespace into the next line.

2008-11-23  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs: Fixed index out of range
	exception when attempting to add a new line to the
	beginning of a file.

2008-11-23  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs: Refactored code relating to auto
	indentation - making it more maintainable/extensible for the
	future in addition to fixing various indentation errors under
	certain circumstances.

2008-11-21  Mike Krüger  <mkrueger@novell.com>
